--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
     "morgan": "^1.10.0"
   },
   "devDependencies": {
+    "@types/cookie-parser": "^1.4.6",
     "@types/express": "^4.17.21",
+    "@types/express-session": "^1.17.10",
+    "@types/morgan": "^1.9.9",
     "@types/node": "^20.11.5",
     "@typescript-eslint/eslint-plugin": "^6.19.0",
     "@typescript-eslint/parser": "^6.19.0",
