--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "morgan": "^1.10.0",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5-lts.1",
+    "mysql2": "^3.7.1",
+    "sequelize": "^6.35.2",
+    "sequelize-cli": "^6.6.2"
   },
   "devDependencies": {
     "@types/cookie-parser": "^1.4.6",
