--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@types/morgan": "^1.9.9",
     "@types/multer": "^1.4.11",
     "@types/node": "^20.11.5",
+    "@types/validator": "^13.11.8",
     "@typescript-eslint/eslint-plugin": "^6.19.0",
     "@typescript-eslint/parser": "^6.19.0",
     "dotenv": "^16.3.1",
